sizing issue on mobile

--- a/styles.css
+++ b/styles.css
@@ -3,8 +3,8 @@ body {background-color: yellow;
 }
         span {background-color: white; 
             margin-left: 45px; margin-top: 24px;
-            display: inline-block; height: 96px; 
-            width: auto; text-align: center;
+            display: inline-block; height: auto; 
+            width: 192px; text-align: center;
             font-family: 'Courier New', Courier, monospace;
             line-height: 96px;
         }
